crates/compiler/src/tests/e2e/good/0310_struct_config/main.gom
struct Config {
    width: int32,
    height: int32,
    title: string,
}

fn main() {
    let c1 = Config { width: 800, height: 600, title: "hello" };
    let c2 = Config { width: 1024, height: c1.height, title: c1.title };
    println(int32_to_string(c2.width));
    println(int32_to_string(c2.height));
    println(c2.title);
}
