crates/compiler/src/tests/e2e/bad/0038_struct_field_parse_error/main.gom
struct Config {
    width: int32,
    height: int32,
    title: string,
}

fn main() {
    let default = Config { width: 800, height: 600, title: "default" };
    let custom = Config { width: 1920, ..default };
    println((custom.width).to_string());
    println((custom.height).to_string());
    println(custom.title);
}
